[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/spriteframes/red_rectangle.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 16 )

[node name="Character" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "idle"
frame = 17
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[connection signal="hits" from="." to="." method="_on_Character_hits" binds= [ 0 ]]
[connection signal="is_hit" from="." to="." method="_on_Character_is_hit"]
[connection signal="lost_game" from="." to="." method="_on_Character_lost_game"]
[connection signal="lost_round" from="." to="." method="_on_Character_lost_round"]
[connection signal="won_game" from="." to="." method="_on_Character_won_game"]
[connection signal="won_round" from="." to="." method="_on_Character_won_round"]
